# protoHandler

./: .build.ps1  .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  protoHandler.sln  protohandler.yml
.config/: nextest.toml
src/: cli.rs  command.rs  config.rs  error.rs  main.rs  runner.rs
src/ProtoHandler/: ArgumentParser.cs  Installer.cs  Log.cs  Program.cs  Runner.cs  Settings.cs  protoHandler.csproj
src/tests/: config.rs
